# tafystudio

./: .commitlintrc.json  .editorconfig  .env.local.example  .eslintrc.js  .gitignore  .markdownlint.json  .npmrc  .prettierrc  CONTRIBUTING.md  Makefile  README.md  cspell.json  docker-compose.dev.yml  docker-compose.test.yml  package-lock.json  package.json  pnpm-lock.yaml  turbo.json  typedoc.json
.github/: changelog-config.json  dependabot.yml  labeler.yml
.github/actions/spelling/: expect.txt
.github/workflows/: ci.yml  deploy.yml  docs.yml  pr-validation.yml  release.yml  security.yml  test.yml  trigger-docs-build.yml
apps/hub-api/: .coveragerc  .env.example  Dockerfile  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
apps/hub-api/app/: __init__.py  main.py
apps/hub-api/app/api/v1/: api.py
apps/hub-api/app/api/v1/endpoints/: devices.py  flows.py  system.py  websocket.py
apps/hub-api/app/core/: config.py  exceptions.py  logging.py  nats.py
apps/hub-api/app/db/: base.py  base_class.py  init_db.py  session.py
apps/hub-api/app/middleware/: __init__.py  logging.py
apps/hub-api/app/models/: __init__.py  base.py  device.py  flow.py
apps/hub-api/app/schemas/: __init__.py  device.py  flow.py  system.py
apps/hub-api/app/services/: __init__.py  device_service.py  flow_service.py  nats_service.py
apps/hub-api/docs/: conf.py
apps/hub-api/tests/: __init__.py  conftest.py  test_devices.py  test_flows.py  test_main.py  test_system.py
apps/hub-ui/: Dockerfile  jest.config.js  next.config.js  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json
apps/hub-ui/__tests__/: example.test.tsx
apps/hub-ui/app/: error.tsx  layout.tsx  not-found.tsx  page.tsx
apps/hub-ui/tests/: webserial-mock.ts  webserial.spec.ts
apps/hub-ui/types/: webserial.d.ts
apps/tafyd/: Dockerfile  go.mod  go.sum  main.go  main_test.go
apps/tafyd/cmd/: root.go
charts/nats/: values.yaml
charts/node-red/: Chart.yaml  values.yaml
charts/node-red/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  pvc.yaml  service.yaml  serviceaccount.yaml
docs/: ARCHITECTURE.md  CONCEPTS.md  DEVELOPMENT_SETUP.md  DOCUMENTATION_BUILD_SPEC.md  ESP32_FLASHING.md  HAL_SPEC.md  NODE_RED_DEPLOYMENT.md  QUICKSTART.md  SECURITY.md  TELEOP_GUIDE.md  TESTING.md  VISION.md  WEBSERIAL_TESTING.md
drivers/camera-usb/: Dockerfile  Makefile  README.md  go.mod
firmware/esp32/: README.md  platformio.ini
scripts/: docs-deploy-workflow-fix.yml  docs-preview.sh  docs-repo-workflow-example.yml  extract-docs.sh  generate-python-docs-sphinx.sh  generate-python-docs.sh  get.tafy.sh  setup-docs-deployment.md  test-device-discovery.sh  test-webserial.sh  validate.sh
test-output/: index.json
tests/integration/: nats_connectivity.test.js  package.json  test_nats_connectivity.js
(+51 files in other folders)
