[project]
name = "tafy-hub-api"
version = "0.0.1"
description = "Tafy Studio Hub API - Backend for Robot Distributed Operation System"
authors = [{name = "Tafy Studio"}]
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.110.0",
    "uvicorn[standard]==0.29.0",
    "pydantic==2.6.0",
    "pydantic-settings==2.2.0",
    "nats-py==2.7.0",
    "websockets==12.0",
    "httpx==0.27.0",
    "python-multipart==0.0.18",
    "python-jose[cryptography]==3.4.0",
    "passlib[bcrypt]==1.7.4",
    "sqlalchemy==2.0.28",
    "alembic==1.13.1",
    "redis==5.0.2",
    "prometheus-client==0.19.0",
    "structlog==24.1.0",
    "python-dotenv==1.0.1",
    "psutil==5.9.8",
]

[project.optional-dependencies]
dev = [
    "pytest==8.0.0",
    "pytest-asyncio==0.23.0",
    "pytest-cov==4.1.0",
    "black==24.2.0",
    "isort==5.13.0",
    "flake8==7.0.0",
    "mypy==1.8.0",
    "types-redis==4.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true