[project]
name = "tafy-hub-api"
version = "0.0.1"
description = "Tafy Studio Hub API - Backend for Robot Distributed Operation System"
authors = [{name = "Tafy Studio"}]
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.116.1",
    "uvicorn[standard]==0.35.0",
    "pydantic==2.11.7",
    "pydantic-settings==2.10.1",
    "nats-py==2.11.0",
    "websockets==15.0.1",
    "httpx==0.28.1",
    "python-multipart==0.0.20",
    "python-jose[cryptography]==3.5.0",
    "passlib[bcrypt]==1.7.4",
    "sqlalchemy==2.0.43",
    "alembic==1.16.4",
    "redis==6.4.0",
    "prometheus-client==0.22.1",
    "structlog==25.4.0",
    "python-dotenv==1.0.1",
    "psutil==7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.1",
    "pytest-asyncio==0.26.0",
    "pytest-cov==6.2.1",
    "black==25.1.0",
    "isort==6.0.1",
    "flake8==7.3.0",
    "mypy==1.17.1",
    "types-redis==4.6.0.20241004",
]
docs = [
    "sphinx==8.2.3",
    "sphinx-rtd-theme==3.0.2",
    "sphinx-autodoc-typehints==3.2.0",
    "sphinx-markdown-builder==0.6.8",
    "myst-parser==4.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true